--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -344,6 +344,11 @@
     <!-- Permission text: apps access car's steering angle information [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_car_steering">Access car\u2019s steering angle information.</string>
 
+    <!-- Permission text: apps access car's steering angle information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_read_car_steering_3p">read car\u2019s steering angle information</string>
+    <!-- Permission text: apps access car's steering angle information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_read_car_steering_3p">Access car\u2019s steering angle information.</string>
+
     <!-- Permission text: apps read display units [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_read_car_display_units">read car display units</string>
     <!-- Permission text: apps read display units [CHAR LIMIT=NONE] -->
