--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -49,6 +49,10 @@
     <string name="car_permission_label_mileage">access car\u2019s mileage information</string>
     <!-- Permission text: can access your car's mileage information [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_mileage">Access your car\u2019s mileage information.</string>
+    <!-- Permission text: can access your car's mileage information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_mileage_3p">access car\u2019s mileage information</string>
+    <!-- Permission text: can access your car's mileage information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_mileage_3p">Access your car\u2019s mileage information.</string>
     <!-- Permission text: can access your car's speed [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_speed">read car\u2019s speed</string>
     <!-- Permission text: can access your car's speed [CHAR LIMIT=NONE] -->
