--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -676,6 +676,11 @@
     <!-- Permission text: apps can read car windshield wipers [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_read_windshield_wipers">Read car\u2019s windshield wipers.</string>
 
+    <!-- Permission text: apps can read car windshield wipers [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_read_windshield_wipers_3p">read car\u2019s windshield wipers</string>
+    <!-- Permission text: apps can read car windshield wipers [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_read_windshield_wipers_3p">Read car\u2019s windshield wipers.</string>
+
     <!-- Permission text: apps can control car windshield wipers [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_control_windshield_wipers">control car\u2019s windshield wipers</string>
     <!-- Permission text: apps can control car windshield wipers [CHAR LIMIT=NONE] -->
