--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -178,6 +178,11 @@
     <!-- Permission text: apps can listen to driving state changes [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_driving_state">Listen to Driving state changes.</string>
 
+    <!-- Permission text: apps can listen to driving state changes [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_driving_state_3p">read car\u2019s driving state</string>
+    <!-- Permission text: apps can listen to driving state changes [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_driving_state_3p">Read car\u2019s driving state changes.</string>
+
     <!-- Permission text: apps can collect metrics. [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_use_telemetry_service">Use Car Telemetry Service</string>
     <!-- Permission text: apps can collect metrics. [CHAR LIMIT=NONE] -->
